fixed missing background image in the login page

--- a/web/src/app/components/shared/sign-in-page/sign-in-page.component.scss
+++ b/web/src/app/components/shared/sign-in-page/sign-in-page.component.scss
@@ -15,7 +15,6 @@
  */
 
 .body-container {
-  background-image: url(/assets/img/happy-land.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
